fixed navigation alignment issue between home pages and other pages

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -82,7 +82,7 @@ a {
 // .header-nav class applies to navigation instances anywhere outside the home page
 
 .header-nav {
-    margin-top: 2vh;
+    margin: 25px 0 0 25px;
 }
 
 .header-nav a {
